--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Lista cognomi</title>
   </head>
   <body>
+    <h1>Lista dei cognomi</h1>
+    <ol id="lista_cognomi"></ol>
+    <p id="posizione"></p>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
